--- a/.github/workflows/auto-dep_dev.yml
+++ b/.github/workflows/auto-dep_dev.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Helm
-        uses: Azure/setup-helm@v1
+        uses: Flydiverny/helm-package-action@0.1.0
         with:
           version: '3'
 
