--- a/.github/workflows/auto-dep_dev.yml
+++ b/.github/workflows/auto-dep_dev.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Fetch Values Files
         run: |
           # Clone the values repository
-          SSH_OPTIONS="-o StrictHostKeyChecking=no"
+          #SSH_OPTIONS="-o StrictHostKeyChecking=no"
           ssh-keyscan -H docs.grid.tf >> ~/.ssh/known_hosts
           eval `ssh-agent -s`
           ssh-add ~/.ssh/id_rsa
