--- a/.github/workflows/auto-dep_dev.yml
+++ b/.github/workflows/auto-dep_dev.yml
@@ -40,6 +40,13 @@ jobs:
         env:
           KUBECONFIG: ${{ secrets.KUBECONFIG }}
 
+      - name: Get Latest Tag
+        id: latest_tag
+        run: |
+          latest_tag=$(curl -s https://api.github.com/repos/threefoldtech/tfgrid-sdk-ts/tags | jq -r '.[].name' | sort -V | tail -n 1 | sed 's/^v//')
+          echo "::set-output name=tag::$latest_tag"
+        shell: bash
+
       - name: Helm Deploy
         run: |
-          helm upgrade --install peter-tfgrid-stats ./packages/stats/chart/ --namespace monitoring -f itenv/Kubernetes-clusters/hagrid-dev/applications/tfchain/tfgrid-stats/values.yaml --set image.tag=${{ steps.latest_tag.outputs.tag }} --set ingress.hosts[0].host=peter.stats.dev.grid.tf --set ingress.tls[0].secretName=peter-stats-dev-grid-tf-tls --set ingress.tls[0].hosts[0]=peter.stats.dev.grid.tf
+          helm upgrade --install peter-tfgrid-stats ./packages/stats/chart/ --namespace monitoring -f itenv/itenv_threefold_main/Kubernetes-clusters/hagrid-dev/applications/tfchain/tfgrid-stats/values.yaml --set image.tag=${{ steps.latest_tag.outputs.tag }} --set ingress.hosts[0].host=peter.stats.dev.grid.tf --set ingress.tls[0].secretName=peter-stats-dev-grid-tf-tls --set ingress.tls[0].hosts[0]=peter.stats.dev.grid.tf
